--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://forms.gle/your-google-form-link'" />
+    <meta http-equiv="refresh" content="0; URL='https://forms.gle/vK2DRqBx1eztNRBo6'" />
   </head>
   <body>
     <p>If you are not redirected automatically, <a href="https://forms.gle/vK2DRqBx1eztNRBo6">click here</a>.</p>
